--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ leaked chats of your area.</p>
 
 <hr>
 
-<h1 style="font-size:1.5em;text-align:center;margin-bottom: 35px;">Main</h1>
+<h1 style="font-size:1.5em;text-align:center;margin-bottom: 35px;">Main One</h1>
 <img style="width: 31%;"src="1.png">
 
 <hr>
